# trabalho_final

./: .gitignore  et --soft HEAD~2  model.ipynb  pyproject.toml  requirements.txt  train copy.ipynb  train.ipynb  utilities.ipynb
.ipynb_checkpoints/: train-checkpoint_1.ipynb
